<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="user">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="web_practicum">"https://practicum.yandex.ru/profile/android-developer/"</string>
    <string name="mail">"avokebasi1@yandex.ru"</string>
    <string name="message">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="subject">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="offer">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="nothing">"Ничего не нашлось"</string>
    <string name="noInternet">"Проблемы со связью"</string>
    <string name="noInternet2">"Загрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="we_search">"Вы искали"</string>
    <string name="clear_history">"Очистить историю"</string>
    <string name="track_name">"Название трека"</string>
    <string name="author_name">"Исполнитель"</string>
    <string name="playtime">"Время исполнения"</string>
    <string name="length">"Длительность"</string>
    <string name="length_en">"length"</string>
    <string name="collection">"Альбом"</string>
    <string name="collection_en">"collection"</string>
    <string name="year">"Год"</string>
    <string name="year_en">"year"</string>
    <string name="genre">"Жанр"</string>
    <string name="genre_en">"genre"</string>
    <string name="country">"Страна"</string>
    <string name="country_en">"country"</string>
    <string name="restore">"Обновить"</string>
</resources>