<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/some_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/panel_header"
        style="@style/FrameLayout"
        >

        <TextView
            android:id="@+id/title"
            style="@style/TextViewStyle"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/title"
            android:textAppearance="@style/title"
            android:textColor="@color/white" />
    </FrameLayout>

    <Button
        android:id="@+id/button_search"
        android:text="@string/search"
        app:icon="@drawable/ic_vector"
        style="@style/ButtonMainStyle"/>

    <Button
        android:id="@+id/button_media"
        android:text="@string/media"
        app:icon="@drawable/ic_media"
        style="@style/ButtonMainStyle"/>

    <Button
        android:id="@+id/button_setting"
        android:text="@string/setting"
        app:icon="@drawable/ic_setting"
        style="@style/ButtonMainStyle"/>

</LinearLayout>