<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/some_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/panel_header1"
        style="@style/FrameLayout">

        <ImageButton
            android:id="@+id/icon"
            android:backgroundTint="?attr/colorOnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:src ="@drawable/ic_back"/>

        <TextView
            android:id="@+id/setting"
            android:layout_marginStart="80dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/setting"
            android:textAppearance="@style/title"
            android:textColor="?attr/colorOnSecondary"
            style="@style/TextViewStyle"/>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/dark_theme"
        style="@style/FrameLayout"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/dark"
            android:text="@string/dark"
            style="@style/TextViewSettingStyle"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_marginBottom="@dimen/dp_21"
            android:thumbTint="?attr/colorSecondary"
            android:trackTint="?attr/colorSecondaryVariant"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share"
        style="@style/FrameLayout">

        <TextView
            android:id="@+id/sharetext"
            android:text="@string/share"
            style="@style/TextViewSettingStyle"/>

        <ImageView
            android:id="@+id/icon_share"
            android:src="@drawable/ic_share"
            style="@style/ImageViewSettingStyle"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/help"
        style="@style/FrameLayout">

        <TextView
            android:id="@+id/supporttext"
            android:text="@string/help"
            style="@style/TextViewSettingStyle"/>

        <ImageView
            android:id="@+id/icon_support"
            android:src="@drawable/ic_support"
            style="@style/ImageViewSettingStyle"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/user_doc"
        style="@style/FrameLayout">

        <TextView
            android:id="@+id/usertext"
            android:text="@string/user"
            style="@style/TextViewSettingStyle"/>

        <ImageView
            android:id="@+id/icon_user"
            android:src="@drawable/ic_user"
            style="@style/ImageViewSettingStyle"/>
    </FrameLayout>

</LinearLayout>