<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <ImageView
        android:id="@+id/player_back_button"
        android:layout_margin="@dimen/dp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/back_pl"
        app:layout_constraintBottom_toTopOf="@id/player_cover_artwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/player_cover_artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/track_pl"
        app:layout_constraintBottom_toTopOf="@id/player_track_name"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_back_button" />

    <TextView
        android:id="@+id/player_track_name"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="22sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginTop="@dimen/dp_24"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/track_name"
        app:layout_constraintBottom_toTopOf="@id/player_artist_name"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_cover_artwork" />

    <TextView
        android:id="@+id/player_artist_name"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/sp_14"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginTop="@dimen/dp_12"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        app:layout_constraintBottom_toTopOf="@id/player_play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_track_name" />

    <ImageView
        android:id="@+id/player_play_button"
        android:src="@drawable/button_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/player_current_playtime"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_artist_name"
        app:layout_constraintWidth_percent="0.28" />

    <ImageView
        android:id="@+id/player_add_to_playlist_button"
        android:src="@drawable/button_add_to_pl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        app:layout_constraintHeight_percent="0.061"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/player_play_button"
        app:layout_constraintWidth_percent="0.142" />

    <ImageView
        android:id="@+id/player_like_button"
        android:src="@drawable/button_like"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHeight_percent="0.061"
        app:layout_constraintTop_toTopOf="@+id/player_play_button"
        app:layout_constraintWidth_percent="0.142" />


    <TextView
        android:id="@+id/player_current_playtime"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playtime"
        app:layout_constraintBottom_toTopOf="@id/track_info_playtime_name"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_play_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />


    <TextView
        android:id="@+id/track_info_playtime_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        app:layout_constraintBottom_toTopOf="@id/track_info_album_name"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_current_playtime" />

    <TextView
        android:id="@+id/track_info_playtime"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length_en"
        app:layout_constraintBottom_toBottomOf="@id/track_info_playtime_name"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toTopOf="@id/track_info_playtime_name" />


    <TextView
        android:id="@+id/track_info_album_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection"
        app:layout_constraintBottom_toTopOf="@id/track_info_year_name"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_info_playtime_name" />

    <TextView
        android:id="@+id/track_info_album"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/collection_en"
        app:layout_constraintBottom_toBottomOf="@id/track_info_album_name"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintStart_toEndOf="@id/track_info_playtime_name"
        app:layout_constraintTop_toTopOf="@id/track_info_album_name" />


    <TextView
        android:id="@+id/track_info_year_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/track_info_genre_name"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_info_album_name" />

    <TextView
        android:id="@+id/track_info_year"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_en"
        app:layout_constraintBottom_toBottomOf="@id/track_info_year_name"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toTopOf="@id/track_info_year_name" />


    <TextView
        android:id="@+id/track_info_genre_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/track_info_country_name"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_info_year_name" />

    <TextView
        android:id="@+id/track_info_genre"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_en"
        app:layout_constraintBottom_toBottomOf="@id/track_info_genre_name"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toTopOf="@id/track_info_genre_name" />


    <TextView
        android:id="@+id/track_info_country_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@id/bottom_info_guideline"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_info_genre_name" />

    <TextView
        android:id="@+id/track_info_country"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_en"
        app:layout_constraintBottom_toBottomOf="@id/track_info_country_name"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintTop_toTopOf="@id/track_info_country_name" />

</androidx.constraintlayout.widget.ConstraintLayout>